Fix typo in MediaError IDL test
From commit dc679f4a366f00b7d228de48de669e18eeb0764a

--- a/html/dom/interfaces.html
+++ b/html/dom/interfaces.html
@@ -3111,7 +3111,7 @@ window.onload = function() {
 		HTMLSourceElement: ['document.createElement("source")'],
 		HTMLTrackElement: ['document.createElement("track")'],
 		HTMLMediaElement: [],
-		MediaError: ['videoError.error'],
+		MediaError: ['errorVideo.error'],
 		AudioTrackList: [],
 		AudioTrack: [],
 		VideoTrackList: [],
