fixed tests per @betravis's feedback

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-002.html
@@ -15,7 +15,7 @@
         <div id="log"></div>
         <script type="text/javascript">
             generate_tests( ParsingUtils.testInlineStyle,
-                            ParsingUtils.buildEllipsesTests("circle", ParsingUtils.serializedEllipses) );
+                            ParsingUtils.buildEllipsoidTests("circle", ParsingUtils.serializedEllipsoids) );
         </script>
     </body>
 </html>
