--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-001.html
@@ -15,12 +15,12 @@
         <div id="log"></div>
         <script type="text/javascript">
             var cases = [
-                ["One arg - px", "10px", "10px 10px 10px 10px"],
-                ["One arg - %", "10%", "10% 10% 10% 10%"],
-                ["Two args - px px", "10px 20px", "10px 20px 10px 20px"],
-                ["Two args - px %", "10px 20%", "10px 20% 10px 20%"],
-                ["Two args - % px", "10% 20px", "10% 20px 10% 20px"],
-                ["Two args - % %", "10% 20%", "10% 20% 10% 20%"],
+                ["One arg - px", "10px", "10px"],
+                ["One arg - %", "10%", "10%"],
+                ["Two args - px px", "10px 20px", "10px 20px"],
+                ["Two args - px %", "10px 20%", "10px 20%"],
+                ["Two args - % px", "10% 20px", "10% 20px"],
+                ["Two args - % %", "10% 20%", "10% 20%"],
                 ["Three args - px px px", "10px 20px 30px", "10px 20px 30px 20px"],
                 ["Three args - px px %", "10px 20px 30%", "10px 20px 30% 20px"],
                 ["Three args - px % px", "10px 20% 30px", "10px 20% 30px 20%"],
