--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-002.html
@@ -15,7 +15,7 @@
         <div id="log"></div>
         <script type="text/javascript">
              generate_tests( ParsingUtils.testInlineStyle,
-                             ParsingUtils.buildEllipsesTests("ellipse", ParsingUtils.serializedEllipses) );
+                             ParsingUtils.buildEllipsoidTests("ellipse", ParsingUtils.serializedEllipsoids) );
         </script>
     </body>
 </html>
