--- a/html/editing/focus/focus-01-manual.html
+++ b/html/editing/focus/focus-01-manual.html
@@ -4,22 +4,23 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/editing.html#focus">
 <meta assert="flag" content="interact">
-<meta assert="assert" content="Check if the key events recieved by document are targeted at the focused element">
+<meta assert="assert" content="Check if the key events received by document are targeted at the element when it is focused">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <h2>Steps:</h2>
 <ol>
   <li>Input any character into the textbox by keyboard in 10 seconds.</li>
 </ol>
-<h2>Expected results:</h2>
+<h2>Expect results:</h2>
 <p>PASS</p>
 <div id="log"></div>
 <input id="test">
 <script>
 
-var t1 = async_test("The keydown event must be targeted at the button element"),
-    t2 = async_test("The keypress event must be targeted at the button element"),
-    t3 = async_test("The keyup event must be targeted at the button element"),
+//These tests can be automated once we have an uniform way to use webdriver.
+var t1 = async_test("The keydown event must be targeted at the input element"),
+    t2 = async_test("The keypress event must be targeted at the input element"),
+    t3 = async_test("The keyup event must be targeted at the input element"),
     testEle;
 
 setup(function () {
@@ -27,25 +28,19 @@ setup(function () {
   testEle.focus();
 }, {timeout: 10000});
 
-document.addEventListener("keydown", function(evt){
-  t1.step(function() {
-    assert_equals(evt.target, testEle, "The keydown events must be targeted at the button element.");
-  });
+document.onkeydown = t1.step_func_done(function(evt){
+  assert_equals(evt.target, testEle, "The keydown events must be targeted at the input element.");
   t1.done();
-}, false);
+});
 
-document.addEventListener("keypress", function(evt){
-  t2.step(function() {
-    assert_equals(evt.target, testEle, "The keypress events must be targeted at the button element.");
-  });
+document.onkeypress = t2.step_func_done(function(evt){
+  assert_equals(evt.target, testEle, "The keypress events must be targeted at the input element.");
   t2.done();
-}, false);
+});
 
-document.addEventListener("keyup", function(evt){
-  t3.step(function() {
-    assert_equals(evt.target, testEle, "The keyup event must be targeted at the button element.");
-  });
-  t3.done()
-}, false);
+document.onkeyup = t3.step_func_done(function(evt){
+  assert_equals(evt.target, testEle, "The keyup events must be targeted at the input element.");
+  t3.done();
+});
 
 </script>
