--- a/html/editing/focus/focus-02-manual.html
+++ b/html/editing/focus/focus-02-manual.html
@@ -4,43 +4,38 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/editing.html#focus">
 <meta assert="flag" content="interact">
-<meta assert="assert" content="Check if the key events recieved by document are targeted at the body element when no element is focused">
+<meta assert="assert" content="Check if the key events received by document are targeted at the element when no element is focused">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <h2>Steps:</h2>
 <ol>
   <li>Press any key in [0-9a-zA-Z].</li>
 </ol>
-<h2>Expected results:</h2>
+<h2>Expect results:</h2>
 <p>PASS</p>
 <div id="log"></div>
 <script>
 
+//These tests can be automated once we have an uniform way to use webdriver.
 var t1 = async_test("The keydown event must be targeted at the body element"),
     t2 = async_test("The keypress event must be targeted at the body element"),
     t3 = async_test("The keyup event must be targeted at the body element");
 
 setup({timeout: 10000});
 
-document.addEventListener("keydown", function(evt){
-  t1.step(function() {
-    assert_equals(evt.target, document.body, "The keydown events must be targeted at the body element.");
-  });
+document.onkeydown = t1.step_func_done(function(evt){
+  assert_equals(evt.target, document.body, "The keydown events must be targeted at the document's body.");
   t1.done();
-}, false);
+});
 
-document.addEventListener("keypress", function(evt){
-  t2.step(function() {
-    assert_equals(evt.target, document.body, "The keypress events must be targeted at the body element.");
-  });
+document.onkeypress = t2.step_func_done(function(evt){
+  assert_equals(evt.target, document.body, "The keypress events must be targeted at the document's body.");
   t2.done();
-}, false);
+});
 
-document.addEventListener("keyup", function(evt){
-  t3.step(function() {
-    assert_equals(evt.target, document.body, "The keyup event must be targeted at the body element.");
-  });
-  t3.done()
-}, false);
+document.onkeyup = t3.step_func_done(function(evt){
+  assert_equals(evt.target, document.body, "The keyup events must be targeted at the document's body.");
+  t3.done();
+});
 
 </script>
