--- a/webrtc/simplecall.html
+++ b/webrtc/simplecall.html
@@ -12,7 +12,7 @@
   var gSecondConnection = null;
 
   function getUserMediaOkCallback(localStream) {
-    gFirstConnection = new RTCPeerConnection(null, null);
+    gFirstConnection = new RTCPeerConnection();
     gFirstConnection.onicecandidate = onIceCandidateToFirst;
     gFirstConnection.addStream(localStream);
     gFirstConnection.createOffer(onOfferCreated);
@@ -30,7 +30,7 @@
   });
 
   function receiveCall(offerSdp) {
-    gSecondConnection = new RTCPeerConnection(null, null);
+    gSecondConnection = new RTCPeerConnection();
     gSecondConnection.onicecandidate = onIceCandidateToSecond;
     gSecondConnection.onaddstream = onRemoteStream;
 
