added missing testharnessreport.js

--- a/webrtc/simplecall.html
+++ b/webrtc/simplecall.html
@@ -5,7 +5,7 @@
   <title>RTCPeerConnection Connection Test</title>
 
   <script src="/resources/testharness.js"></script>
-
+  <script src="/resources/testharnessreport.js"></script>
   <script type="text/javascript">
   var test = async_test('Can set up a basic WebRTC call.', {timeout: 5000});
   var gFirstConnection = null;
