--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
@@ -6,7 +6,7 @@
         <link rel="author" title="Ion Roșca" href="mailto:rosca@adobe.com">
         <link rel="reviewer" title="Mihai Țică" href="mailto:mitica@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-        <meta name="flags" content="">
+        <meta name="flags" content="dom"/>
         <meta name="assert" content="Test checks that an element having mix-blend-mode blends with its parent element having 3D transform and transition">
         <style type="text/css">
             .parent {
