Stop using /resources/media/sunflower.*
The other media resources are in /media/ and it would be nice to remove
sunflower.* from this odd location. The two modified tests didn't
actually need a moving video, the static movie_5.* is enough.

--- a/html/semantics/embedded-content-0/media-elements/interfaces/TextTrack/activeCues.html
+++ b/html/semantics/embedded-content-0/media-elements/interfaces/TextTrack/activeCues.html
@@ -2,6 +2,7 @@
 <title>TextTrack.activeCues</title>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
+<script src=/common/media.js></script>
 <div id=log></div>
 <script>
 setup(function(){
@@ -98,6 +99,6 @@ test1.step(function(){
         video.play();
         test1.done();
     });
-    video.src = '/resources/media/sunflower.' + (video.canPlayType('video/webm') ? 'webm' : 'mp4');
+    video.src = getVideoURI("/media/movie_5");
 });
 </script>
