--- a/html/editing/dnd/media/001.xhtml
+++ b/html/editing/dnd/media/001.xhtml
@@ -18,13 +18,14 @@ function start(event)
 	draggedFrame = canvas.toDataURL('image/png');
 	event.dataTransfer.setData('text/uri-list',draggedFrame);}
 </script>
+<script src="/common/media.js"></script>
 </head>
 <body dropzone="copy string:text/uri-list" ondrop="dropIt(event)">
 <p>
 	<video draggable="true" ondragstart="start(event)" controls="true"/>
  <script>
   var video = document.querySelector('video');
-  video.src = '/resources/media/sunflower.' + (video.canPlayType('video/webm') ? 'webm' : 'mp4');
+  video.src = getVideoURI('/media/movie_5');
  </script>
 </p>
 <p>Drag video and drop it somewhere on the page. Dragged frame should be copied to the canvas below and you should see word PASS once you drop video.</p>
