--- a/shadow-dom/styles/shadow-all/test-001.html
+++ b/shadow-dom/styles/shadow-all/test-001.html
@@ -39,7 +39,7 @@ SD_SHADOW_ALL_QUERYSELECTOR_T1.step(unit(function (ctx) {
     var s1 = createSR(outerhost);
 
     var div1 = d.createElement('div');
-    var span1 = d.createElement('span1');
+    var span1 = d.createElement('span');
     span1.setAttribute('id', 'not-top');
     div1.appendChild(span1);
     s1.appendChild(div1);
@@ -88,7 +88,7 @@ SD_SHADOW_ALL_QUERYSELECTOR_T2.step(unit(function (ctx) {
     var s1 = createSR(outerhost);
 
     var div1 = d.createElement('div');
-    var span1 = d.createElement('span1');
+    var span1 = d.createElement('span');
     span1.setAttribute('id', 'not-top');
     div1.appendChild(span1);
     s1.appendChild(div1);
@@ -140,7 +140,7 @@ SD_SHADOW_ALL_QUERYSELECTOR_T3.step(unit(function (ctx) {
     var s1 = createSR(outerhost);
 
     var div1 = d.createElement('div');
-    var span1 = d.createElement('span1');
+    var span1 = d.createElement('span');
     span1.setAttribute('id', 'not-top');
     div1.appendChild(span1);
     s1.appendChild(div1);
