--- a/FileAPI/url/url_createobjecturl_blob.html
+++ b/FileAPI/url/url_createobjecturl_blob.html
@@ -18,13 +18,13 @@
         var testBlob = window.URL.createObjectURL(blob);
         assert_equals(typeof testBlob, "string", "Blob URI is typeof string");
         assert_equals(testBlob.indexOf("blob"), 0, "Blob URI starts with 'blob'");
-      }, "Check if the Blob URI starts with 'blob' without 'autoRevoke'");
+      }, "Check if the Blob URI starts with 'blob' using createObjectURL()");
 
       test(function() {
         var testBlob = window.URL.createFor(blob);
         assert_equals(typeof testBlob, "string", "Blob URI is typeof string");
         assert_equals(testBlob.indexOf("blob"), 0, "Blob URI starts with 'blob'");
-      }, "Check if the Blob URI starts with 'blob' with autoRevoke is false");
+      }, "Check if the Blob URI starts with 'blob' using createFor()");
     </script>
   </body>
 </html>
