Test non-support of autobuffer

--- a/html/semantics/embedded-content-0/media-elements/historical.html
+++ b/html/semantics/embedded-content-0/media-elements/historical.html
@@ -29,6 +29,7 @@ t('pixelratio', 'source'); // added in r1629, removed in r2493.
 t('bufferedBytes'); // added in r1630, removed in r2405.
 t('totalBytes'); // added in r1630, removed in r2405.
 t('bufferingThrottled'); // added in r1632, removed in r2872.
+t('autobuffer'); // added in r2855, replaced with preload in r4811.
 t('startTime'); // added in r3035, replaced with initialTime in r5310.
 t('startOffsetTime'); // added in r5310, replaced with startDate in r7045.
 t('initialTime'); // added in r5310, removed in r7046.
