added writing modes per @bembjb's feedback

--- a/test-plans/css-shapes-1/index.html
+++ b/test-plans/css-shapes-1/index.html
@@ -418,6 +418,7 @@
               <li>CSS Transitions</li>
               <li>CSS Animations</li>
               <li>CSS Exclusions</li>
+              <li>CSS Writing Modes (when float + container have different writing-mode and direction properties)</li>
           </ul>
     </section>
     <section>
