try again: updated with feedback from @bemjb

--- a/test-plans/css-shapes-1/index.html
+++ b/test-plans/css-shapes-1/index.html
@@ -305,6 +305,7 @@
                             <ul>
                                 <li>square corners</li>
                                 <li>rounded corners</li>
+                                <li>rounded corners to make circles &amp; ellipses</li>
                             </ul>
                         </li>
                         <li>circle, ellipse
@@ -418,6 +419,7 @@
               <li>CSS Transitions</li>
               <li>CSS Animations</li>
               <li>CSS Exclusions</li>
+              <li>CSS Writing Modes - when the float and container have different 'writing-mode' and 'direction' properties</li>
           </ul>
     </section>
     <section>
