--- a/html/browsers/windows/browsing-context-names/browsing-context-choose-existing.html
+++ b/html/browsers/windows/browsing-context-names/browsing-context-choose-existing.html
@@ -2,7 +2,6 @@
 <meta charset="utf-8">
 <title>HTML Test: Choose browsing context - the given name is same as an existing browsing context's name</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
-<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/browsers.html#browsing-context-names">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
@@ -14,7 +13,7 @@ var t = async_test("The browsing context must be chosen if the given name is sam
 
 window.addEventListener("message", function (e) {
   t.step(function() {
-    assert_equals(e.data.name, "existWin", "The window context name should be 'existWin'.");
+    assert_equals(e.data.name, "existWin", "The browsing context name should be 'existWin'.");
   });
   t.done();
 }, false);
