--- a/html/browsers/windows/browsing-context-names/browsing-context-choose-parent.html
+++ b/html/browsers/windows/browsing-context-names/browsing-context-choose-parent.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: Choose browsing context - the given name is _parent</title>
+<title>HTML Test: Choose browsing context - the given name is '_parent'</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
-<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/browsers.html#browsing-context-names">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
@@ -13,7 +12,7 @@ var t = async_test("The parent browsing context must be chosen if the given name
 
 window.addEventListener("message", function (e) {
   t.step(function() {
-    assert_equals(e.data.name, "parentWin", "The window context name should be 'parentWin'.");
+    assert_equals(e.data.name, "parentWin", "The browsing context name should be 'parentWin'.");
   });
   t.done();
 }, false);
